--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
       <artifactId>okhttp</artifactId>
       <version>3.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-circuitbreaker</artifactId>
+      <version>1.7.0</version>
+    </dependency>
   </dependencies>
 
   <build>
