--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.9.RELEASE</version>
+    <version>2.4.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.kruskal</groupId>
@@ -21,7 +21,7 @@
 
     <dependency>
       <groupId>com.kruskal.resilix</groupId>
-      <artifactId>resilix-springboot-v1</artifactId>
+      <artifactId>resilix-springboot-v2</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
